Add content edit/view actions
Signed-off-by: James Taylor <jamest@uk.ibm.com>

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -6,3 +6,8 @@
     margin-bottom: .5em;
     margin-right: .5em;
 }
+
+/* TODO some way to add a bit of blue to the top of only the home page? */
+.home-blue-bg {
+    background: linear-gradient(to top, var(--md-accent-bg-color) 0 80%, var(--md-accent-fg-color) 80% 100%);
+}
